--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "chat app with nodejs and socket.io",
   "main": "index.js",
   "scripts": {
-  	"start": "node server/server.js"
+    "start": "node server/server.js"
   },
   "engines": {
-  	"node": "8.11.1"
+    "node": "8.11.1"
   },
   "author": "Ahmed Meklad",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "socket.io": "^2.1.0"
   }
 }
