--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat app with nodejs and socket.io",
   "main": "index.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "babel-node server/server.js"
   },
   "engines": {
     "node": "6.14.1"
@@ -12,6 +12,9 @@
   "author": "Ahmed Meklad",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "express": "^4.16.3",
     "socket.io": "^2.1.0"
   }
